# rust-htmx

./: Cargo.toml  README.md
src/: main.rs
templates/: index.html  stream.html  todos.html
